<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.wildmaster84</groupId>
  <artifactId>Lavender</artifactId>
  <version>26.1.2-SNAPSHOT</version>
  <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
    <repository>
        <id>minestom-snapshots</id>
        <url>https://central.sonatype.com/repository/maven-snapshots/</url>
    </repository>

    <repository>
        <id>central</id>
        <url>https://repo.maven.apache.org/maven2</url>
    </repository>
    <repository>
        <id>jitpack.io</id>
        <url>https://jitpack.io</url>
    </repository>
    <repository>
        <id>hypera-snapshots</id>
        <url>https://repo.hypera.dev/snapshots/</url>
    </repository>
    <repository>
        <id>lucko</id>
        <url>https://repo.lucko.me/</url>
    </repository>
    <repository>
        <id>sonatype-snapshots</id>
        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </repository>
</repositories>

<dependencies>
    <dependency>
        <groupId>net.minestom</groupId>
        <artifactId>minestom</artifactId>
        <version>2026.07.01-26.1.2</version>
    </dependency>

    <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.5.18</version>
    </dependency>
    <dependency>
        <groupId>org.fusesource.jansi</groupId>
        <artifactId>jansi</artifactId>
        <version>2.4.1</version>
    </dependency>
    <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>2.2</version>
    </dependency>
	
	<dependency>
	    <groupId>rocks.minestom</groupId>
	    <artifactId>worldgen</artifactId>
	    <version>0.2.0</version>
	    <scope>compile</scope>
	</dependency>
	<dependency>
		<groupId>com.google.guava</groupId>
		<artifactId>guava</artifactId>
		<version>33.2.1-jre</version>
	</dependency>
    <dependency>
        <groupId>dev.lu15</groupId>
        <artifactId>spark-minestom</artifactId>
        <version>1.10-SNAPSHOT</version>
        <scope>compile</scope>
    </dependency>
</dependencies>
<build>
    <plugins>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.5.0</version>
            <configuration>
                <mainClass>
                    me.wildmaster84.adapter.Bootstrap
                </mainClass>
            </configuration>
        </plugin>
        <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-shade-plugin</artifactId>
		    <version>3.6.0</version>
		
		    <executions>
		        <execution>
		            <phase>package</phase>
		            <goals>
		                <goal>shade</goal>
		            </goals>
		
	            <configuration>
	                <filters>
	                    <filter>
	                        <artifact>*:*</artifact>
	                        <excludes>
	                            <exclude>META-INF/versions/9/module-info.class</exclude>
	                            <exclude>module-info.class</exclude>
	                        </excludes>
	                    </filter>
	                </filters>
	                <transformers>
	                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
	                        <mainClass>
	                            me.wildmaster84.adapter.Bootstrap
	                        </mainClass>
	                    </transformer>
	                </transformers>
	            </configuration>
		        </execution>
		    </executions>
		</plugin>
    </plugins>
</build>
</project>